[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/main_menu.gd" type="Script" id=1]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontIngame.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMediumBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/styles/button_left.tres" type="Theme" id=4]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/styles/button_right.tres" type="Theme" id=5]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/play_menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/Content.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/editor_configuration.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/about.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontIngame_Small.tres" type="DynamicFont" id=10]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/follow-that-dream-by-luca-fraula-from-filmmusic-io.ogg" type="AudioStream" id=11]
[ext_resource path="res://screenshot.png" type="Texture" id=12]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/UI/styles/panel_popup.tres" type="StyleBox" id=13]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
version = "0.9.dev"

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -76.0
margin_top = -26.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 10 )
text = "Version: 0.0"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMusic" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -26.0
margin_right = 86.0
grow_vertical = 0
custom_fonts/font = ExtResource( 10 )
text = "MENU_MUSIC:"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_left = 21.0
margin_top = -1.05945
margin_right = 323.0
margin_bottom = -1.05945
theme = ExtResource( 5 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Buttons"]
margin_top = 116.0
margin_right = 328.0
margin_bottom = 165.0
size_flags_horizontal = 3
text = "MENU_PLAY"

[node name="Content" type="Button" parent="Buttons"]
margin_top = 169.0
margin_right = 328.0
margin_bottom = 218.0
size_flags_horizontal = 3
text = "MENU_CONTENT"

[node name="Create" type="Button" parent="Buttons"]
margin_top = 222.0
margin_right = 328.0
margin_bottom = 271.0
size_flags_horizontal = 3
text = "MENU_CREATE"

[node name="Settings" type="Button" parent="Buttons"]
margin_top = 275.0
margin_right = 328.0
margin_bottom = 324.0
size_flags_horizontal = 3
text = "MENU_SETTINGS"

[node name="About" type="Button" parent="Buttons"]
margin_top = 328.0
margin_right = 328.0
margin_bottom = 377.0
size_flags_horizontal = 3
text = "MENU_ABOUT"

[node name="Feedback" type="Button" parent="Buttons"]
margin_top = 381.0
margin_right = 328.0
margin_bottom = 430.0
grow_horizontal = 0
text = "MENU_FEEDBACK_WANTED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 434.0
margin_right = 328.0
margin_bottom = 483.0
size_flags_horizontal = 3
text = "MENU_QUIT"

[node name="About" parent="." instance=ExtResource( 9 )]
visible = false
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="Play" parent="." instance=ExtResource( 6 )]
visible = false

[node name="Content" parent="." instance=ExtResource( 7 )]
visible = false

[node name="EditorConfiguration" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="Feedback" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.5
margin_top = -80.5
margin_right = 227.5
margin_bottom = 80.5
custom_styles/panel = ExtResource( 13 )
custom_fonts/title_font = ExtResource( 3 )
custom_constants/close_h_ofs = 28
custom_constants/scaleborder_size = 41
window_title = "Feedback"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Feedback"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 8.0
margin_right = -6.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Feedback/VBoxContainer"]
margin_right = 443.0
margin_bottom = 111.0
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "MENU_FEEDBACK_QUESTION"

[node name="HBoxContainer" type="HBoxContainer" parent="Feedback/VBoxContainer"]
margin_top = 115.0
margin_right = 443.0
margin_bottom = 149.0
size_flags_horizontal = 3

[node name="Later" type="Button" parent="Feedback/VBoxContainer/HBoxContainer"]
margin_right = 208.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 2 )
text = "MENU_LATER"
align = 0

[node name="OpenWebBrowser" type="Button" parent="Feedback/VBoxContainer/HBoxContainer"]
margin_left = 212.0
margin_right = 443.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
text = "MENU_OPEN_IN_BROWSER"
align = 2

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -25.384
autoplay = true
bus = "Music"

[connection signal="pressed" from="Buttons/Play" to="." method="_on_PlayFront_pressed"]
[connection signal="pressed" from="Buttons/Content" to="." method="_on_Content_pressed"]
[connection signal="pressed" from="Buttons/Create" to="." method="_on_FrontCreate_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_SettingsFront_pressed"]
[connection signal="pressed" from="Buttons/About" to="." method="_on_AboutFront_pressed"]
[connection signal="pressed" from="Buttons/Feedback" to="." method="_on_ButtonFeedback_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Feedback/VBoxContainer/HBoxContainer/Later" to="." method="_on_Later_pressed"]
[connection signal="pressed" from="Feedback/VBoxContainer/HBoxContainer/OpenWebBrowser" to="." method="_on_OpenWebBrowser_pressed"]
